--- a/tools/ExtensionLibrary/DevHome.ExtensionLibrary/Views/ExtensionLibraryView.xaml
+++ b/tools/ExtensionLibrary/DevHome.ExtensionLibrary/Views/ExtensionLibraryView.xaml
@@ -23,9 +23,9 @@
         <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="0,22,0,0">
             <StackPanel>
 
-                <!-- On your PC items -->
+                <!-- Installed items -->
                 <Grid Margin="{StaticResource SettingsPageSubTitleMargin}">
-                    <TextBlock x:Uid="OnYourPcTextBlock"
+                    <TextBlock x:Uid="InstalledTextBlock"
                                Style="{StaticResource SettingsSectionHeaderTextBlockStyle}"
                                VerticalAlignment="Center"/>
                     <Button x:Uid="GetUpdatesButton"
